frontend/src/app/result/result.component.css
.paragraphLogoResult {
  font-size: 40px;
}

.result-count {
  margin: 10px;
  font-size: 12px;
  color: #808080;
}

@media only screen and (max-width : 320px) {
  .result-count {
    text-align: center;
  }
}

.logo-link {
  text-decoration: none;
}

/* hide checkbox */
.hide-mat-checkbox ::ng-deep.mat-pseudo-checkbox {
  display: none !important;
}

.content-container {
  margin: 10px;
}

.mat-drawer-container {
  height: 100%;
}

.sidenav-ex {
  width: 60%;
}

@media only screen and (max-width : 320px) {
  .sidenav-ex {
    width: 100%;
  }
}

.mobile-toggle {
  float: right;
  margin-right: 20px;
}

